--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-tags-input",
-  "description": "A special angular directive used with input to make input to grow as soon as user types text.",
+  "description": "This directive allows to type into input small tags and store their values in ng-model.",
   "version": "0.0.1",
   "keywords": ["tags-input", "tokenizer", "selectize", "select", "select2"],
   "authors": [
