added missed deps into bower.json

--- a/bower.json
+++ b/bower.json
@@ -29,9 +29,9 @@
   ],
   "dependencies": {
     "angular": ">= 1.0.8",
-    "angular-auto-grow-input": "master",
-    "angular-select-options": "master",
-    "angular-disable-all": "master"
+    "angular-auto-grow-input": "latest",
+    "angular-select-options": "latest",
+    "angular-disable-all": "latest"
   },
   "devDependencies": {
     "angular-mocks": ">= 1.0.8",
